src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABACUS_code__c</fullName>
        <label>ABACUS code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Authorized_Provide__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - ABB Authorized Provide</description>
        <inlineHelpText>Mark if valid authorization. Workflow will be implemented in R6</inlineHelpText>
        <label>ABB authorized value provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ABB_Business_Partner_Segment_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Leading Business Partner Segment&quot;</description>
        <label>Business Partner Segment Level1</label>
        <picklist>
            <picklistValues>
                <fullName>A05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Business_Partner_Segment_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Business Partner Segment Level 1 to replace &quot;Leading Business Partner Segment&quot; 
Picklist containing the Business Partner Segment level2 Values</description>
        <label>Business Partner Segment Level2</label>
        <picklist>
            <controllingField>ABB_Business_Partner_Segment_Level1__c</controllingField>
            <picklistValues>
                <fullName>00.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Industry usage&quot;.
Picklist containing the Industry Usage level1 Values</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 1 to replace &quot;Industry usage&quot; 
Picklist containing the Industry Usage level2 Values</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level2</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Industry_Usage_Level3__c</fullName>
        <description>R4.1 - New dependent picklist field created for Industry usage level 2 to replace &quot;Industry__c&quot; 
Picklist containing the Industry Usage level3 Values</description>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level3</label>
        <picklist>
            <controllingField>ABB_Industry_Usage_Level2__c</controllingField>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.9.10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ABB_Sales_Engineer__c</fullName>
        <inlineHelpText>Enetr the email address of the Lead ABB Contact person for this location</inlineHelpText>
        <label>ABB Sales Engineer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ABC_Class__c</fullName>
        <label>ABC Class</label>
        <picklist>
            <picklistValues>
                <fullName>A-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J-customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccSelectionDetail__c</fullName>
        <description>This Field is created to show the Name + address on the Account Change flow search results. This should never be shown on Layouts.</description>
        <formula>Name+&quot; : &quot;+BillingCountry+ IF( !ISBLANK(BillingCountry) ,&quot; , &quot;, &quot;&quot;) +BillingState+ IF( !ISBLANK(BillingState) ,&quot; , &quot;, &quot;&quot;) +BillingCity+IF( !ISBLANK(BillingCity) ,&quot; , &quot;, &quot;&quot;)+  BillingStreet+IF( !ISBLANK(BillingStreet) ,&quot; , &quot;, &quot;&quot;)+ BillingPostalCode</formula>
        <label>AccSelectionDetail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Inactive__c</fullName>
        <description>This status flag will show up on the Inactive Accounts Page Layout only</description>
        <formula>IF ( Active__c = FALSE,
     IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Account Inactive&quot;) &amp; &quot; Inactive&quot; ,
     IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Account Active&quot;) &amp; &quot; Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Account is set to Inactive and cannot be edited</inlineHelpText>
        <label>Account Inactive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Local_Short_Name__c</fullName>
        <inlineHelpText>Defaults to GIS Short Name (Local Language)</inlineHelpText>
        <label>Short Name (Local Language)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_AWA_technical__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R5 AWA</description>
        <label>Account Manager - AWA technical</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <inlineHelpText>Defaults to GIS Short Name</inlineHelpText>
        <label>Short Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>Choose from drop down list</inlineHelpText>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Major</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is to e used to control access to the record, as part of the GIS Team Operations.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingDayOfMonth__c</fullName>
        <description>The billing day of month for the account. Specific Day of Month, End of Month, etc</description>
        <inlineHelpText>The billing day of month for the account. Specific Day of Month, End of Month, etc</inlineHelpText>
        <label>Billing Day Of Month</label>
        <picklist>
            <picklistValues>
                <fullName>1st of the Month</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2nd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21st of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22nd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23rd of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29th of the Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30th of the Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceStatementTemplate__c</fullName>
        <description>The name of the default template for generating invoice statements</description>
        <inlineHelpText>The name of the default template for generating invoice statements</inlineHelpText>
        <label>Default Invoice Statement Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <picklist>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>R5 Business Line</description>
        <label>Business Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BvD_Number__c</fullName>
        <label>BvD Number</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIT_code__c</fullName>
        <label>CIT code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Channel class&quot;
Channel classification code of the account.</description>
        <inlineHelpText>Channel classification of the account.</inlineHelpText>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Channel Class Level1. Channel classification code of the account.</description>
        <inlineHelpText>Channel Classification for Level 2 of Account is Optional</inlineHelpText>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level_1__c</fullName>
        <description>R5 Picklist field for Front end data - Channel Class Level 1</description>
        <label>Channel Class Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level_2__c</fullName>
        <description>R5 Picklist field for Front end data - Channel Class Level 2</description>
        <label>Channel Class Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Segment_Name_del__c</fullName>
        <label>Channel Class Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>